# lifeee-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: main.yml
assets/: styles.css
src/: color_utils.rs  main.rs  settings.rs
src/components/: board.rs  counter.rs  game.rs  mod.rs  pattern_selector.rs  title.rs
src/lexicon/: lexicon.txt  mod.rs
src/life/: mod.rs
