[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
gloo = "0.3"
wasm-bindgen = "0.2.74"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlSelectElement',
  'Window',
  'WheelEvent',
]
